nuget package info

--- a/CurrieTechnologies.Razor.SweetAlert2/CurrieTechnologies.Razor.SweetAlert2.csproj
+++ b/CurrieTechnologies.Razor.SweetAlert2/CurrieTechnologies.Razor.SweetAlert2.csproj
@@ -1,8 +1,21 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
+    <Version>0.1.0</Version>
+    <Authors>Michael J. Currie</Authors>
+    <Company>Currie Technologies</Company>
+    <Product>Razor.SweetAlert2</Product>
+    <Description>A Razor class library for interacting with SweetAlert2</Description>
+    <Copyright>Michael J. Currie</Copyright>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/Basaingeal/Razor.SweetAlert2</PackageProjectUrl>
+    <PackageIconUrl>https://currietechnologyimages.blob.core.windows.net/logos/logo_v2_128.png</PackageIconUrl>
+    <RepositoryUrl>https://github.com/Basaingeal/Razor.SweetAlert2</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>Blazor SweetAlert SweetAlert2 JSInterop Server Razor</PackageTags>
+    <PackageReleaseNotes>Initial realease</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
