--- a/CurrieTechnologies.Razor.SweetAlert2/package.json
+++ b/CurrieTechnologies.Razor.SweetAlert2/package.json
@@ -1,6 +1,6 @@
 {
   "name": "currietechnologies-razorsweetalert2",
-  "version": "0.1.0-preview",
+  "version": "0.1.0",
   "description": "A Blazor JSInterop library for interacting with SweetAlert2",
   "scripts": {
     "build": "webpack",
