--- a/CurrieTechnologies.Razor.SweetAlert2/CurrieTechnologies.Razor.SweetAlert2.csproj
+++ b/CurrieTechnologies.Razor.SweetAlert2/CurrieTechnologies.Razor.SweetAlert2.csproj
@@ -16,7 +16,8 @@ Use in Server-side Blazor apps.</Description>
     <RepositoryUrl>https://github.com/Basaingeal/Razor.SweetAlert2</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>Blazor SweetAlert SweetAlert2 JSInterop Server Razor</PackageTags>
-    <PackageReleaseNotes>improve IE11 compatability</PackageReleaseNotes>
+    <PackageReleaseNotes>- Improve IE11 compatability
+- Update Nuget description</PackageReleaseNotes>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
