--- a/CurrieTechnologies.Razor.SweetAlert2/package.json
+++ b/CurrieTechnologies.Razor.SweetAlert2/package.json
@@ -1,7 +1,7 @@
 {
   "name": "currietechnologies-razorsweetalert2",
-  "version": "0.1.3",
-  "description": "A Blazor JSInterop library for interacting with SweetAlert2",
+  "version": "0.2.0",
+  "description": "A Razor class library for interacting with SweetAlert2",
   "scripts": {
     "build": "webpack",
     "build:tsc": "tsc",
