--- a/CurrieTechnologies.Razor.SweetAlert2/package.json
+++ b/CurrieTechnologies.Razor.SweetAlert2/package.json
@@ -12,10 +12,9 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.136",
-    "@types/node": "^12.6.2",
+    "@types/node": "^12.6.3",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.0.0",
-    "filemanager-webpack-plugin": "^2.0.5",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
@@ -26,7 +25,8 @@
     "tslint": "^5.18.0",
     "typescript": "^3.5.3",
     "webpack": "^4.35.3",
-    "webpack-cli": "^3.3.6"
+    "webpack-cli": "^3.3.6",
+    "webpack-fix-style-only-entries": "^0.3.0"
   },
   "dependencies": {
     "@sweetalert2/themes": "^2.0.3",
