--- a/.gitignore
+++ b/.gitignore
@@ -599,3 +599,5 @@ typings/
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 
 # End of https://www.gitignore.io/api/node,csharp,visualstudio,visualstudiocode
+
+wwwroot/
