--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,5 +1,10 @@
 trigger:
 - master
+- releases/*
+
+pr:
+- master
+- releases/*
 
 pool:
   vmImage: 'windows-latest'
@@ -52,4 +57,32 @@ steps:
   inputs:
     command: 'build'
     projects: '**/*.csproj'
-    arguments: '-c Release'
+    arguments: '-c $(buildConfiguration)'
+
+- task: DotNetCoreCLI@2
+  displayName: 'Publishing'
+  inputs:
+    command: 'publish'
+    publishWebProjects: false
+    projects: '**/*.csproj'
+    arguments: '-c $(buildConfiguration) -o out'
+    zipAfterPublish: false
+    modifyOutputPath: false
+
+- task: DotNetCoreCLI@2
+  displayName: 'Packing'
+  inputs:
+    command: 'pack'
+    packagesToPack: '**/*.csproj'
+    versioningScheme: 'byPrereleaseNumber'
+    majorVersion: '0'
+    minorVersion: '2'
+    patchVersion: '4'
+
+- task: DotNetCoreCLI@2
+  displayName: 'Pushing'
+  inputs:
+    command: 'push'
+    packagesToPush: '$(Build.ArtifactStagingDirectory)/*.nupkg'
+    nuGetFeedType: 'internal'
+    publishVstsFeed: '92bb098c-7077-481e-813d-9c0d49ec780d'
