--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,8 +19,17 @@ variables:
 
 steps:
 - task: Npm@1
+  displayName: 'Install Latest NPM'
   inputs:
-    command: 'ci'
+    command: 'custom'
+    customCommand: 'install -g npm@latest'
+    workingDir: '$(projectName)'
+
+- task: Npm@1
+  displayName: 'Install CI'
+  inputs:
+    command: 'custom'
+    customCommand: 'ci'
     workingDir: '$(projectName)'
     
 - task: Npm@1
