--- a/CurrieTechnologies.Razor.SweetAlert2/package.json
+++ b/CurrieTechnologies.Razor.SweetAlert2/package.json
@@ -13,8 +13,10 @@
   "devDependencies": {
     "@types/lodash": "^4.14.136",
     "@types/node": "^12.6.6",
+    "@typescript-eslint/eslint-plugin": "^1.12.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.0.0",
+    "eslint": "^6.0.1",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
