--- a/CurrieTechnologies.Razor.SweetAlert2/package.json
+++ b/CurrieTechnologies.Razor.SweetAlert2/package.json
@@ -6,17 +6,19 @@
     "build": "SET NODE_ENV=production && webpack -p --color",
     "build:tsc": "tsc",
     "watch": "webpack --watch",
-    "lint": "tslint ./src/*.ts",
+    "lint": "eslint ./src --ext .ts",
     "prettier:write": "prettier --write ./src/ts/*.ts",
     "prettier:check": "prettier --check ./src/ts/*.ts"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.136",
-    "@types/node": "^12.6.6",
+    "@types/node": "^12.6.8",
     "@typescript-eslint/eslint-plugin": "^1.12.0",
+    "@typescript-eslint/parser": "^1.12.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.0.0",
-    "eslint": "^6.0.1",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^6.0.0",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
