--- a/CurrieTechnologies.Razor.SweetAlert2/package.json
+++ b/CurrieTechnologies.Razor.SweetAlert2/package.json
@@ -8,14 +8,23 @@
     "watch": "webpack --watch",
     "lint": "eslint ./src --ext .ts",
     "prettier:write": "prettier --write ./src/ts/*.ts",
-    "prettier:check": "prettier --check ./src/ts/*.ts"
+    "prettier:check": "prettier --check ./src/ts/*.ts",
+    "babel": "babel ./src/ts/SweetAlert.ts --out-dir wwwroot --extensions .ts,.tsx"
   },
   "devDependencies": {
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-typescript": "^7.3.3",
     "@types/lodash": "^4.14.136",
     "@types/node": "^12.6.8",
     "@typescript-eslint/eslint-plugin": "^1.12.0",
     "@typescript-eslint/parser": "^1.12.0",
+    "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
+    "core-js": "^3.1.4",
     "css-loader": "^3.1.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^6.0.0",
@@ -23,6 +32,7 @@
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prettier": "^1.18.2",
+    "regenerator-runtime": "^0.13.3",
     "sass-loader": "^7.1.0",
     "terser-webpack-plugin": "^1.3.0",
     "ts-loader": "^6.0.4",
@@ -34,7 +44,7 @@
   },
   "dependencies": {
     "@sweetalert2/themes": "^2.0.3",
-    "lodash": "4.17.14",
+    "lodash": "4.17.15",
     "sweetalert2": "8.14.0"
   },
   "author": "Michael J. Currie",
@@ -42,5 +52,14 @@
   "eslintIgnore": [
     "*.js",
     "*.ts"
+  ],
+  "browserslist": [
+    "ie 11",
+    "last 2 edge versions",
+    "last 2 chrome versions",
+    "last 2 firefox versions",
+    "last 2 safari versions",
+    "last 2 opera versions",
+    "last 2 and_uc versions"
   ]
 }
