--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,6 @@ pool:
 
 variables:
   buildConfiguration: 'Release'
-  projectName: 'CurrieTechnologies.Razor.SweetAlert2'
 
 steps:
 - task: Npm@1
@@ -23,42 +22,36 @@ steps:
   inputs:
     command: 'custom'
     customCommand: 'install -g npm@latest'
-    workingDir: '$(projectName)'
 
 - task: Npm@1
   displayName: 'Install CI'
   inputs:
     command: 'custom'
     customCommand: 'ci'
-    workingDir: '$(projectName)'
     
 - task: Npm@1
   displayName: 'Linting'
   inputs:
     command: 'custom'
     customCommand: 'run lint'
-    workingDir: '$(projectName)'
 
 - task: Npm@1
   displayName: 'Checking Prettier'
   inputs:
     command: 'custom'
     customCommand: 'run prettier:check'
-    workingDir: '$(projectName)'
 
 - task: Npm@1
   displayName: 'Checking Types'
   inputs:
     command: 'custom'
     customCommand: 'run build:tsc'
-    workingDir: '$(projectName)'
 
 - task: Npm@1
   displayName: 'Building JS and CSS'
   inputs:
     command: 'custom'
     customCommand: 'run build'
-    workingDir: '$(projectName)'
 
 - task: DotNetCoreInstaller@0
   displayName: 'Installing .NET Core SDK...'
@@ -90,7 +83,7 @@ steps:
 - task: CopyFiles@2
   displayName: 'Copying CHANGELOG'
   inputs:
-    Contents: '$(projectName)/CHANGELOG.md'
+    Contents: 'CHANGELOG.md'
     TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
 - task: PublishBuildArtifacts@1
