--- a/CurrieTechnologies.Razor.SweetAlert2.csproj
+++ b/CurrieTechnologies.Razor.SweetAlert2.csproj
@@ -20,7 +20,7 @@
     <RepositoryType>git</RepositoryType>
     <PackageTags>Blazor SweetAlert SweetAlert2 JSInterop Server Razor</PackageTags>
     <PackageReleaseNotes>
-      - New theme added: Bootstrap 4
+      - Update to .NET Core 3.0 Preview 8
     </PackageReleaseNotes>
   </PropertyGroup>
 
