--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -97,6 +97,7 @@ jobs:
     pool:
       vmImage: 'windows-latest'
     condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/azure-pipelines'), eq(variables['Build.BuildReason'], 'IndividualCI'))
+    environment: currietechnologies-prod
     strategy:
       runOnce:
         deploy:
